@@ -1,6 +1,8 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix handling of HTML form elements in messages (#1485137)
+- Fix regression in setting recipient to self when replying to a Sent message (#1487074)
 - Fix listing of folders in hidden namespaces (#1486796)
 - Don't consider \Noselect flag when building folders tree (#1488004)
 - Fix sorting autocomplete results (#1488084)
